Fixed image alignment

--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ body {
 .social-bar {
 	margin-left: auto;
 	margin-right: auto;
-	width: 400px;
+	width: 370px;
 }
 
 .social-icon {
